# nodebench-qa

./: .env.example  .mcp.json  COMMIT_MSG.tmp  Cargo.toml  Dockerfile
convex/: crons.ts  http.ts  schema.ts
convex/_generated/: api.d.ts
convex/domains/daas/: agentTrace.ts  architectClassifier.ts  benchmarks.ts  compileDown.ts  costCap.ts  health.ts  ownership.ts  radarIngest.ts  schema.ts
daas/: distill.py  generate.py  ingest.py  replay.py  report.py  schemas.py
daas/agent/: __init__.py  agent_loop.py  base.py  tools.py
daas/agent/runtimes/: __init__.py  claude.py  gemini.py  langgraph.py  openai.py  openrouter.py
daas/benchmarks/: __init__.py  attrition_csv_eval_harness.py  attrition_eval_template_v1.csv  csv_eval_harness.py  scaffold_runtime_fidelity.py
daas/benchmarks/bfcl/: __init__.py  baseline.py  live.py  runner.py
daas/benchmarks/mmlu_pro/: __init__.py  runner.py
daas/compile_down/: __init__.py  artifact.py  cli.py  meta_workflow.py  playbook_induction.py  replay_harness.py
daas/compile_down/emitters/: __init__.py  _bundle_finalize.py  simple_chain.py  tool_first_chain.py
daas/compile_down/output/verify_177666288/tool_first_chain/: README.md  _bundle.json  prompts.py  runner.py  schemas.py  tools.py
daas/compile_down/output/verify_177666288/world_model_full/: README.md  _bundle.json  actions.ts  entities.yaml  events.schema.ts  evidence_refs.json  interpretive_boundary.md  outcomes.table.ts  policies.yaml  states.schema.ts
daas/compile_down/world_model/: __init__.py  emitter.py
daas/examples/traces/: floorai_milk.json
daas/results/: TELEMETRY_REPORT.md  attrition_eval_filled_v1_full.csv  attrition_eval_filled_v1_smoke_v4.csv  attrition_eval_filled_v1_smoke_v5.csv  attrition_eval_filled_v1_smoke_v6.csv  attrition_eval_filled_v1_smoke_v7.csv  attrition_eval_filled_v1_smoke_v8.csv  attrition_eval_filled_v1_smoke_v9.csv  attrition_eval_filled_v2_full.csv  attrition_eval_filled_v6_full.csv  attrition_eval_summary_v1_full.json  attrition_eval_summary_v1_smoke_v4.json  attrition_eval_summary_v1_smoke_v5.json  attrition_eval_summary_v1_smoke_v6.json  attrition_eval_summary_v1_smoke_v7.json  attrition_eval_summary_v1_smoke_v8.json  attrition_eval_summary_v1_smoke_v9.json  attrition_eval_summary_v2_full.json  attrition_eval_summary_v6_full.json  canonical_traces.json  daas_report.html  judgments.json  nodebench_eval_filled.csv  nodebench_eval_filled.json  replays.json  scaffold_runtime_fidelity.json  telemetry.json  workflow_specs.json
daas/scaffolds/: workflow_floorai_cooler_emergency.py  workflow_floorai_milk_delivery.py  workflow_floorai_staffing.py
daas/skills/: README.md  _style.md  claude_agent_sdk.md  convex_functions.md  deerflow.md  hermes.md  langgraph_python.md  manus.md  openai_agents_sdk.md  orchestrator_worker.md  simple_chain.md  tool_first_chain.md  vercel_ai_sdk.md
daas/tests/: test_agent_runtimes.py  test_compile_down_emitters.py  test_mmlu_pro_adapter.py  test_scenarios.py  test_world_model_emitter.py
docs/: ARCHITECT_CLASSIFIER_PROMPT.md  ATTRITION_EVAL_TEMPLATE.md  BEHAVIORAL_DESIGN_AUDIT.md  BUILDER_GENERATION_SPEC.md  BYO_CSV_EVAL.md  CONNECTOR_RESOLVER_SPEC.md  GAP_CHECKLIST.md  JUDGE_EVAL_BENCHMARKS.md  LIVE_RUN_AND_TRACE_ADR.md  RADAR_INGEST_SOURCES.md  SCAFFOLDING_WEDGE.md  STEAL_FROM_OPEN_SOURCE.md  TRANSLATION_LAYER_AUDIT.md  WORLD_MODEL_SPEC.md
executor/: main.py
experiments/scaffolding_wedge/: report.py  run.py  run_v2.py
experiments/scaffolding_wedge/results/: judgments.json  raw_responses.json  report.html
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/: robots.txt  sitemap.xml
frontend/src/: index.css  main.tsx
frontend/src/_convex/: api.d.ts
frontend/src/components/: ChatMessage.tsx  ChatPanel.tsx  Layout.tsx  PreviewTab.tsx  ProofSection.tsx  RuntimeSelector.tsx  ToolCallCard.tsx  TraceDropzone.tsx
frontend/src/contexts/: ChatContext.tsx
frontend/src/lib/: api.ts  normalize_trace.ts  runtime_selector.ts  storage.ts
frontend/src/pages/: Architect.tsx  Audit.tsx  Builder.tsx  Improvements.tsx  Landing.tsx  Live.tsx  NextSteps.tsx  Proof.tsx  Radar.tsx  Results.tsx  Run.tsx  Sitemap.tsx
rust/crates/agents/: Cargo.toml
rust/crates/agents/src/: coordinator.rs  lib.rs  pipeline.rs
rust/crates/api/: Cargo.toml
rust/crates/api/src/: lib.rs  state.rs
rust/crates/api/src/routes/: qa.rs
rust/crates/cli/: Cargo.toml  README.md
rust/crates/cli/src/: main.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: config.rs  error.rs  lib.rs
rust/crates/distiller/: Cargo.toml
rust/crates/distiller/src/: lib.rs
rust/crates/distiller/src/strategies/: checkpoint_prune.rs  context_compress.rs  copy_paste_block.rs  mod.rs  step_elimination.rs
rust/crates/judge/: Cargo.toml
rust/crates/judge/src/: attention.rs  diff.rs  engine.rs  learner.rs  lib.rs  types.rs
rust/crates/llm-client/: Cargo.toml
rust/crates/llm-client/src/: client.rs  lib.rs  types.rs
rust/crates/mcp-server/: Cargo.toml
rust/crates/mcp-server/src/: lib.rs  protocol.rs  tools.rs
rust/crates/qa-engine/: Cargo.toml
rust/crates/qa-engine/src/: audit.rs  crawl.rs  diff.rs  lib.rs  qa.rs  workflow.rs
rust/crates/sdk/: Cargo.toml
rust/crates/sdk/src/: lib.rs
rust/crates/telemetry/: Cargo.toml
rust/crates/telemetry/src/: lib.rs
rust/crates/workflow/: Cargo.toml
rust/crates/workflow/src/: lib.rs  storage.rs  types.rs
rust/crates/workflow/src/adapters/: claude_code.rs  generic.rs  mod.rs  raw_api.rs
