[package]
name = "benchpress-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-agent orchestration: coordinator, QA pipeline, device testing"

[dependencies]
benchpress-core = { path = "../core" }
benchpress-engine = { path = "../qa-engine" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
futures-util.workspace = true
