[package]
name = "benchpress-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axum HTTP API server for benchpress"

[dependencies]
benchpress-core = { path = "../core" }
benchpress-engine = { path = "../qa-engine" }
benchpress-agents = { path = "../agents" }
benchpress-telemetry = { path = "../telemetry" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
