[package]
name = "attrition-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axum HTTP API server for attrition"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attrition-core = { path = "../core" }
attrition-engine = { path = "../qa-engine" }
attrition-agents = { path = "../agents" }
attrition-judge = { path = "../judge" }
attrition-telemetry = { path = "../telemetry" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
