[package]
name = "benchpress-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI binary for benchpress"

[[bin]]
name = "bp"
path = "src/main.rs"

[dependencies]
benchpress-core = { path = "../core" }
benchpress-api = { path = "../api" }
benchpress-mcp = { path = "../mcp-server" }
benchpress-engine = { path = "../qa-engine" }
benchpress-agents = { path = "../agents" }
benchpress-telemetry = { path = "../telemetry" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
benchpress-sdk = { path = "../sdk" }
axum.workspace = true
