[package]
name = "attrition-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI binary for attrition"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "bp"
path = "src/main.rs"

[dependencies]
attrition-core = { path = "../core" }
attrition-api = { path = "../api" }
attrition-mcp = { path = "../mcp-server" }
attrition-engine = { path = "../qa-engine" }
attrition-agents = { path = "../agents" }
attrition-telemetry = { path = "../telemetry" }
attrition-workflow = { path = "../workflow" }
attrition-distiller = { path = "../distiller" }
attrition-judge = { path = "../judge" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
directories.workspace = true
attrition-sdk = { path = "../sdk" }
axum.workspace = true
