[package]
name = "attrition-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, config, and error handling for attrition"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
config.workspace = true
directories.workspace = true
tracing.workspace = true
reqwest.workspace = true
toml.workspace = true
