[package]
name = "attrition-distiller"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model distillation engine for attrition"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attrition-core = { path = "../core" }
attrition-workflow = { path = "../workflow" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
