[package]
name = "benchpress-judge"
version = "0.1.0"
edition = "2024"

[dependencies]
benchpress-core = { path = "../core" }
benchpress-workflow = { path = "../workflow" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
