[package]
name = "attrition-judge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LLM judge and evaluation engine for attrition"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attrition-core = { path = "../core" }
attrition-workflow = { path = "../workflow" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
