[package]
name = "benchpress-llm-client"
version = "0.1.0"
edition = "2024"

[dependencies]
benchpress-core = { path = "../core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
base64.workspace = true
