[package]
name = "attrition-llm-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-provider LLM client for attrition (Anthropic, OpenAI, OpenAI-compatible)"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attrition-core = { path = "../core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
base64.workspace = true
