[package]
name = "benchpress-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for benchpress"

[dependencies]
benchpress-core = { path = "../core" }
benchpress-engine = { path = "../qa-engine" }
benchpress-agents = { path = "../agents" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrpc-core.workspace = true
tracing.workspace = true
uuid.workspace = true
