[package]
name = "attrition-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for attrition"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attrition-core = { path = "../core" }
attrition-engine = { path = "../qa-engine" }
attrition-agents = { path = "../agents" }
attrition-workflow = { path = "../workflow" }
attrition-distiller = { path = "../distiller" }
attrition-judge = { path = "../judge" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrpc-core.workspace = true
tracing.workspace = true
uuid.workspace = true
directories.workspace = true
