[package]
name = "attrition-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "QA engine: browser automation, crawling, accessibility audits"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attrition-core = { path = "../core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
thiserror.workspace = true
# chromiumoxide.workspace = true  # Enable when browser automation needed
