[package]
name = "benchpress-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust SDK for consuming benchpress services"

[dependencies]
benchpress-core = { path = "../core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
