[package]
name = "benchpress-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Telemetry, tracing, and observability for benchpress"

[dependencies]
benchpress-core = { path = "../core" }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
