[package]
name = "attrition-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Telemetry, tracing, and observability for attrition"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attrition-core = { path = "../core" }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
