[package]
name = "attrition-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Workflow capture, storage, and replay for attrition"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attrition-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite = { version = "0.33", features = ["bundled"] }
